Improved API.
